Data/Vindefjallen_data/Arc_Vindefjellen/GpMessages/375363932469200
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: 16 November 2023 15:29:13</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    $row + 1
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at 16 November 2023 15:29:13 (Elapsed Time: 0.11 seconds)</msg></messages>